cmake_minimum_required(VERSION 3.30)

project(RaytracingInOneWeekend LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(CHAPTER_02 "Chapter02")
set(CHAPTER_03 "Chapter03")

add_subdirectory(ThirdParty)
add_subdirectory(${CHAPTER_02})
add_subdirectory(${CHAPTER_03})