cmake_minimum_required(VERSION 3.30)

project(RaytracingInOneWeekend LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(CHAPTER_02 "Chapter02")
set(CHAPTER_03 "Chapter03")
set(CHAPTER_04 "Chapter04")
set(CHAPTER_05 "Chapter05")
set(CHAPTER_06 "Chapter06")
set(CHAPTER_07 "Chapter07")
set(CHAPTER_08 "Chapter08")
set(CHAPTER_09 "Chapter09")
set(CHAPTER_10 "Chapter10")

add_subdirectory(${CHAPTER_02})
add_subdirectory(${CHAPTER_03})
add_subdirectory(${CHAPTER_04})
add_subdirectory(${CHAPTER_05})
add_subdirectory(${CHAPTER_06})
add_subdirectory(${CHAPTER_07})
add_subdirectory(${CHAPTER_08})
add_subdirectory(${CHAPTER_09})
add_subdirectory(${CHAPTER_10})