cmake_minimum_required(VERSION 3.30)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(PROJECT_NAME "Chapter06_02")
set(PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(PROJECT_SOURCE_PATH "${PROJECT_PATH}/Source")

file(GLOB_RECURSE PROJECT_SOURCE_FILE "${PROJECT_SOURCE_PATH}/**")

add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_FILE})

set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

source_group(TREE "${PROJECT_SOURCE_PATH}" PREFIX "Source" FILES ${PROJECT_SOURCE_FILE})